// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/popup/demo/basic.md correctly 1`] = `
<div
  class="m-example-popup-wrapper"
>
  <button
    class="m-button m-button-primary"
    style="margin-bottom:10px"
    type="button"
  >
    <div
      class="m-button-inner"
    >
      <span>
        屏幕中弹出
      </span>
    </div>
  </button>
  <div
    class="m-popup m-popup-center"
  >
    <div
      class="m-popup-mask"
      style="display:none"
    />
    <div
      class="m-popup-box"
      style="display:none"
    >
      <div
        class="m-example-popup m-example-popup-center"
      >
        Popup Center
      </div>
    </div>
  </div>
  <button
    class="m-button m-button-primary"
    style="margin-bottom:10px"
    type="button"
  >
    <div
      class="m-button-inner"
    >
      <span>
        底部弹出
      </span>
    </div>
  </button>
  <div
    class="m-popup m-popup-bottom"
  >
    <div
      class="m-popup-mask"
      style="display:none"
    />
    <div
      class="m-popup-box"
      style="display:none"
    >
      <div
        class="m-popup-title-bar"
      >
        <div
          class="m-popup-title-bar-left"
        >
          cancel
        </div>
        <div
          class="m-popup-title-bar-center"
        >
          <div
            class="m-popup-title-bar-title"
          >
            Popup Title
          </div>
          <div
            class="m-popup-title-bar-describe"
          >
            Popup Description
          </div>
        </div>
        <div
          class="m-popup-title-bar-right"
        >
          ok
        </div>
      </div>
      <div
        class="m-example-popup m-example-popup-bottom"
      >
        Popup Bottom
      </div>
    </div>
  </div>
  <button
    class="m-button m-button-primary"
    style="margin-bottom:10px"
    type="button"
  >
    <div
      class="m-button-inner"
    >
      <span>
        顶部弹出
      </span>
    </div>
  </button>
  <div
    class="m-popup m-popup-top"
  >
    <div
      class="m-popup-mask"
      style="display:none"
    />
    <div
      class="m-popup-box"
      style="display:none"
    >
      <div
        class="m-example-popup m-example-popup-top"
      >
        Popup Top
      </div>
    </div>
  </div>
  <button
    class="m-button m-button-primary"
    style="margin-bottom:10px"
    type="button"
  >
    <div
      class="m-button-inner"
    >
      <span>
        左侧弹出
      </span>
    </div>
  </button>
  <div
    class="m-popup m-popup-left"
  >
    <div
      class="m-popup-mask"
      style="display:none"
    />
    <div
      class="m-popup-box"
      style="display:none"
    >
      <div
        class="m-example-popup m-example-popup-left"
      >
        Popup Left
      </div>
    </div>
  </div>
  <button
    class="m-button m-button-primary"
    style="margin-bottom:10px"
    type="button"
  >
    <div
      class="m-button-inner"
    >
      <span>
        右侧弹出
      </span>
    </div>
  </button>
  <div
    class="m-popup m-popup-right"
  >
    <div
      class="m-popup-mask"
      style="display:none"
    />
    <div
      class="m-popup-box"
      style="display:none"
    >
      <div
        class="m-example-popup m-example-popup-right"
      >
        Popup Right
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ./components/popup/demo/other.md correctly 1`] = `
<div
  class="m-example-popup-wrapper"
>
  <button
    class="m-button m-button-primary"
    style="margin-bottom:10px"
    type="button"
  >
    <div
      class="m-button-inner"
    >
      <span>
        无遮罩层
      </span>
    </div>
  </button>
  <div
    class="m-popup m-popup-top"
  >
    <div
      class="m-popup-box"
      style="display:none"
    >
      <div
        class="m-example-popup m-example-popup-top"
      >
        Popup Top
      </div>
    </div>
  </div>
  <button
    class="m-button m-button-primary"
    style="margin-bottom:10px"
    type="button"
  >
    <div
      class="m-button-inner"
    >
      <span>
        禁用遮罩层点击
      </span>
    </div>
  </button>
  <div
    class="m-popup m-popup-bottom"
  >
    <div
      class="m-popup-mask"
      style="display:none"
    />
    <div
      class="m-popup-box"
      style="display:none"
    >
      <div
        class="m-popup-title-bar"
      >
        <div
          class="m-popup-title-bar-left"
        >
          <i
            class="m-icon m-icon-close-circle-o"
          >
            <svg
              aria-hidden="true"
              class=""
              fill="currentColor"
              height="1em"
              width="1em"
            >
              <use
                href="#icon-close-circle-o"
              />
            </svg>
          </i>
        </div>
        <div
          class="m-popup-title-bar-center"
        >
          <div
            class="m-popup-title-bar-title"
          >
            禁用遮罩层点击
          </div>
          <div
            class="m-popup-title-bar-describe"
          />
        </div>
        <div
          class="m-popup-title-bar-right"
        />
      </div>
      <div
        class="m-example-popup m-example-popup-mask"
      >
        Popup Bottom
      </div>
    </div>
  </div>
  <button
    class="m-button m-button-primary"
    style="margin-bottom:10px"
    type="button"
  >
    <div
      class="m-button-inner"
    >
      <span>
        防止滚动穿透
      </span>
    </div>
  </button>
  <div
    class="m-popup m-popup-bottom"
  >
    <div
      class="m-popup-mask"
      style="display:none"
    />
    <div
      class="m-popup-box"
      style="display:none"
    >
      <div
        class="m-popup-title-bar"
      >
        <div
          class="m-popup-title-bar-left"
        >
          关闭
        </div>
        <div
          class="m-popup-title-bar-center"
        >
          <div
            class="m-popup-title-bar-title"
          >
            防止滚动穿透
          </div>
          <div
            class="m-popup-title-bar-describe"
          />
        </div>
        <div
          class="m-popup-title-bar-right"
        />
      </div>
      <div
        class="m-example-popup m-example-popup-scroll"
      >
        <div>
          Popup Bottom
        </div>
        <div>
          Popup Bottom
        </div>
        <div>
          Popup Bottom
        </div>
        <div>
          Popup Bottom
        </div>
        <div>
          Popup Bottom
        </div>
        <div>
          Popup Bottom
        </div>
        <div>
          Popup Bottom
        </div>
        <div>
          Popup Bottom
        </div>
        <div>
          Popup Bottom
        </div>
        <div>
          Popup Bottom
        </div>
      </div>
    </div>
  </div>
</div>
`;
